Add service for enabling high current mode on robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_service_files(
   MaxAcceleration.srv
   MaxTemperature.srv
   ConvertCoordinates.srv
+  HighCurrent.srv
 )
 
 generate_messages(DEPENDENCIES
