Add message to allow altering ABC params via external script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_service_files(
   DutyCycle.srv
   ReturnTemperature.srv
   GetNumAgents.srv
+  BacIntervene.srv
 )
 
 generate_messages(DEPENDENCIES
